--- a/Code.ipynb
+++ b/Code.ipynb
@@ -11,15 +11,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Q1: Estimate the average number of people that 'like' any given tweet by Elon Musk."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +26,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q1: Estimate the average number of people that 'like' any given tweet by Elon Musk."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -54,6 +54,41 @@
     "\n",
     "avg = count_like/count_post\n",
     "print(avg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q2: From the above, estimate how many people view one of his tweets, on average. Assume that engagement rate, calculated by summing likes, replies, and retweets, and dividing by views, is roughly .05 for any given tweet."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14596239120.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "engagement_rate = 0.05\n",
+    "#Estimate how many people view one of his tweets\n",
+    "#EngagementRate = (likes+replies+retweets)/views\n",
+    "count_replies = 0\n",
+    "count_retweet = 0\n",
+    "for df in df_array:\n",
+    "    count_replies += np.sum(np.array(df[\"nreplies\"]))\n",
+    "    count_retweet += np.sum(np.array(df[\"nretweets\"]))\n",
+    "tot =  count_like + count_replies + count_retweet\n",
+    "view =  tot/engagement_rate\n",
+    "print(view)\n",
+    "\n"
    ]
   },
   {
