--- a/Code.ipynb
+++ b/Code.ipynb
@@ -65,14 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14596239120.0\n"
+      "338864.2596461903\n"
      ]
     }
    ],
@@ -87,7 +87,8 @@
     "    count_retweet += np.sum(np.array(df[\"nretweets\"]))\n",
     "tot =  count_like + count_replies + count_retweet\n",
     "view =  tot/engagement_rate\n",
-    "print(view)\n",
+    "avg_peop = view/count_post\n",
+    "print(avg_peop)\n",
     "\n"
    ]
   },
