--- a/Code.ipynb
+++ b/Code.ipynb
@@ -88,8 +88,14 @@
     "tot =  count_like + count_replies + count_retweet\n",
     "view =  tot/engagement_rate\n",
     "avg_peop = view/count_post\n",
-    "print(avg_peop)\n",
-    "\n"
+    "print(avg_peop)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q3: Estimate the average amount of data (in megabytes) stored for each Elon Musk tweet. Consider the sizes and types of any attached media."
    ]
   },
   {
