--- a/Code.ipynb
+++ b/Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -97,6 +97,141 @@
    "source": [
     "### Q3: Estimate the average amount of data (in megabytes) stored for each Elon Musk tweet. Consider the sizes and types of any attached media."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0                                                    []\n",
+      "1                                                    []\n",
+      "2     ['https://pbs.twimg.com/media/Ahmp9qtCAAAYPDX....\n",
+      "3     ['https://pbs.twimg.com/media/AhmoamaCQAANvSt....\n",
+      "4                                                    []\n",
+      "5                                                    []\n",
+      "6                                                    []\n",
+      "7                                                    []\n",
+      "8                                                    []\n",
+      "9                                                    []\n",
+      "10    ['https://pbs.twimg.com/media/AhZIrMMCQAAayCv....\n",
+      "11    ['https://pbs.twimg.com/media/AhQ_A75CQAAYXlN....\n",
+      "12    ['https://pbs.twimg.com/media/AhQnPFbCIAAEyYJ....\n",
+      "13                                                   []\n",
+      "14                                                   []\n",
+      "15                                                   []\n",
+      "16                                                   []\n",
+      "17                                                   []\n",
+      "18                                                   []\n",
+      "19                                                   []\n",
+      "20                                                   []\n",
+      "21                                                   []\n",
+      "22                                                   []\n",
+      "23                                                   []\n",
+      "24                                                   []\n",
+      "25    ['https://pbs.twimg.com/media/Afkf5DMCAAEJGFr....\n",
+      "26                                                   []\n",
+      "Name: photos, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_array[1][\"photos\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5166017693504202\n"
+     ]
+    }
+   ],
+   "source": [
+    "count_tweet_k_bytes = 0\n",
+    "count_pic = 0\n",
+    "count_url_k_bytes = 0\n",
+    "for df in df_array:\n",
+    "    count_tweet_bytes = 0\n",
+    "    count_url_bytes = 0\n",
+    "    for photos in df[\"photos\"]:\n",
+    "        for k in photos:\n",
+    "            count_pic += len(k)\n",
+    "    for tweet in df[\"tweet\"]:\n",
+    "        t =  len(tweet)\n",
+    "        count_tweet_bytes+= t\n",
+    "    for link in df[\"urls\"]:\n",
+    "        for url in link:\n",
+    "            count_url_bytes += len(url)\n",
+    "    count_url_k_bytes += (count_url_bytes/1000)\n",
+    "    count_tweet_k_bytes += (count_tweet_bytes/1000)\n",
+    "count_tweet_megabytes =  count_tweet_k_bytes/1000\n",
+    "count_url_megabytes = count_url_k_bytes/1000\n",
+    "#assume each pic is 100kb\n",
+    "count_pic_megabytes =  (count_pic*100)/1000\n",
+    "total_in_mb =  count_tweet_megabytes+count_pic_megabytes+count_url_megabytes\n",
+    "ans = total_in_mb/count_post\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q4: Should be the same as Q3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q5: Estimate how many Elon tweets are viewed, perminute,by the site's userbase."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17.061699000173682\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = 11\n",
+    "year_in_minute =  year*525600\n",
+    "#assume all the post are viewed\n",
+    "view_per_min = (view/year_in_minute)\n",
+    "tweet_vpm = count_post/view_per_min\n",
+    "#other answer is 0.007\n",
+    "print(tweet_vpm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
