--- a/Code.ipynb
+++ b/Code.ipynb
@@ -227,17 +227,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Q6: Using the above, estimate how much data is accessed per-minute by Twitter in the process of displaying Elon Musk tweets."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
