--- a/Code.ipynb
+++ b/Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -100,51 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0                                                    []\n",
-      "1                                                    []\n",
-      "2     ['https://pbs.twimg.com/media/Ahmp9qtCAAAYPDX....\n",
-      "3     ['https://pbs.twimg.com/media/AhmoamaCQAANvSt....\n",
-      "4                                                    []\n",
-      "5                                                    []\n",
-      "6                                                    []\n",
-      "7                                                    []\n",
-      "8                                                    []\n",
-      "9                                                    []\n",
-      "10    ['https://pbs.twimg.com/media/AhZIrMMCQAAayCv....\n",
-      "11    ['https://pbs.twimg.com/media/AhQ_A75CQAAYXlN....\n",
-      "12    ['https://pbs.twimg.com/media/AhQnPFbCIAAEyYJ....\n",
-      "13                                                   []\n",
-      "14                                                   []\n",
-      "15                                                   []\n",
-      "16                                                   []\n",
-      "17                                                   []\n",
-      "18                                                   []\n",
-      "19                                                   []\n",
-      "20                                                   []\n",
-      "21                                                   []\n",
-      "22                                                   []\n",
-      "23                                                   []\n",
-      "24                                                   []\n",
-      "25    ['https://pbs.twimg.com/media/Afkf5DMCAAEJGFr....\n",
-      "26                                                   []\n",
-      "Name: photos, dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df_array[1][\"photos\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -178,8 +134,8 @@
     "#assume each pic is 100kb\n",
     "count_pic_megabytes =  (count_pic*100)/1000\n",
     "total_in_mb =  count_tweet_megabytes+count_pic_megabytes+count_url_megabytes\n",
-    "ans = total_in_mb/count_post\n",
-    "print(ans)"
+    "avg_mb_per_tweet = total_in_mb/count_post\n",
+    "print(avg_mb_per_tweet)"
    ]
   },
   {
@@ -205,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -234,8 +190,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.814103891614021\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_per_min =  avg_mb_per_tweet * tweet_vpm\n",
+    "print(data_per_min)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Q7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#this function will change the number of like in 1 tweet\n",
+    "def change_nlike(df,id, like):\n",
+    "    #user pass in a dataframe (assume it's the database where it stores all elon's tweets in a year)\n",
+    "    #id is the conversation id\n",
+    "    #like is the value the user want to change to\n",
+    "    for i in range(len(df)):\n",
+    "        if(df[i][\"conversation id\"] == id):\n",
+    "            df[i][\"nlikes\"] = like\n",
+    "            break\n",
+    "    return \"Success\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
