--- a/Code.ipynb
+++ b/Code.ipynb
@@ -177,9 +177,8 @@
     "year_in_minute =  year*525600\n",
     "#assume all the post are viewed\n",
     "view_per_min = (view/year_in_minute)\n",
-    "tweet_vpm = count_post/view_per_min\n",
     "#other answer is 0.007\n",
-    "print(tweet_vpm)"
+    "print(view_per_min)"
    ]
   },
   {
