--- a/Code.ipynb
+++ b/Code.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import urllib.request\n",
+    "import validators"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -100,42 +102,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5166017693504202\n"
+      "2.6067687602730185\n"
      ]
     }
    ],
    "source": [
-    "count_tweet_k_bytes = 0\n",
-    "count_pic = 0\n",
-    "count_url_k_bytes = 0\n",
+    "\n",
+    "total_pic_size = 0\n",
+    "total_url_size = 0\n",
+    "total_tweet_size = 0\n",
+    "total_vid_size = 0\n",
     "for df in df_array:\n",
-    "    count_tweet_bytes = 0\n",
-    "    count_url_bytes = 0\n",
     "    for photos in df[\"photos\"]:\n",
-    "        for k in photos:\n",
-    "            count_pic += len(k)\n",
+    "        if(validators.url(photos)):\n",
+    "            file = urllib.request.urlopen(photos)\n",
+    "            total_pic_size += file.length\n",
     "    for tweet in df[\"tweet\"]:\n",
-    "        t =  len(tweet)\n",
-    "        count_tweet_bytes+= t\n",
+    "        total_tweet_size += len(tweet)\n",
     "    for link in df[\"urls\"]:\n",
-    "        for url in link:\n",
-    "            count_url_bytes += len(url)\n",
-    "    count_url_k_bytes += (count_url_bytes/1000)\n",
-    "    count_tweet_k_bytes += (count_tweet_bytes/1000)\n",
-    "count_tweet_megabytes =  count_tweet_k_bytes/1000\n",
-    "count_url_megabytes = count_url_k_bytes/1000\n",
-    "#assume each pic is 100kb\n",
-    "count_pic_megabytes =  (count_pic*100)/1000\n",
-    "total_in_mb =  count_tweet_megabytes+count_pic_megabytes+count_url_megabytes\n",
-    "avg_mb_per_tweet = total_in_mb/count_post\n",
-    "print(avg_mb_per_tweet)"
+    "        if(validators.url(link)):\n",
+    "            url = urllib.request.urlopen(link)\n",
+    "            total_url_size += file.length\n",
+    "    total_vid_size += np.sum(df[\"video\"])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "total_vid_size *= 40\n",
+    "total = ((total_pic_size + total_url_size + total_tweet_size) / 1000000) + total_vid_size\n",
+    "print(total/count_post)"
    ]
   },
   {
@@ -190,20 +192,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8.814103891614021\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data_per_min =  avg_mb_per_tweet * tweet_vpm\n",
-    "print(data_per_min)"
+    "#ughhh"
    ]
   },
   {
