--- a/Code.ipynb
+++ b/Code.ipynb
@@ -102,14 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.516784082741329\n"
+      "13.03347628685518\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
     "total_pic_size = 0\n",
     "total_url_size = 0\n",
     "total_tweet_size = 0\n",
-    "total_vid_size = 0\n",
+    "total_vid = 0\n",
     "for df in df_array:\n",
     "    for photos in df[\"photos\"]:\n",
     "        if(validators.url(photos)):\n",
@@ -130,13 +130,13 @@
     "        if(validators.url(link)):\n",
     "            url = urllib.request.urlopen(link)\n",
     "            total_url_size += file.length\n",
-    "    total_vid_size += np.sum(df[\"video\"])\n",
+    "    total_vid += np.sum(df[\"video\"])\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "total_vid_size *= 100\n",
-    "total = ((total_pic_size + total_url_size + total_tweet_size) / 1000000) + total_vid_size\n",
+    "total_vid *= 200\n",
+    "total = ((total_pic_size + total_url_size + total_tweet_size) / 1000000) + total_vid\n",
     "print(total/count_post)"
    ]
   },
