--- a/Code.ipynb
+++ b/Code.ipynb
@@ -102,14 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13.03347628685518\n"
+      "19.550168490969032\n"
      ]
     }
    ],
@@ -130,12 +130,8 @@
     "        if(validators.url(link)):\n",
     "            url = urllib.request.urlopen(link)\n",
     "            total_url_size += file.length\n",
-    "    total_vid += np.sum(df[\"video\"])\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "total_vid *= 200\n",
+    "    total_vid += np.sum(np.array(df[\"video\"]))\n",
+    "total_vid*= 300\n",
     "total = ((total_pic_size + total_url_size + total_tweet_size) / 1000000) + total_vid\n",
     "print(total/count_post)"
    ]
