--- a/Code.ipynb
+++ b/Code.ipynb
@@ -133,7 +133,8 @@
     "    total_vid += np.sum(np.array(df[\"video\"]))\n",
     "total_vid*= 300\n",
     "total = ((total_pic_size + total_url_size + total_tweet_size) / 1000000) + total_vid\n",
-    "print(total/count_post)"
+    "avg_mb_per_tweet = total/count_post\n",
+    "print(avg_mb_per_tweet)"
    ]
   },
   {
@@ -188,11 +189,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1304.213877690228\n"
+     ]
+    }
+   ],
    "source": [
-    "#ughhh"
+    "data_per_min =  avg_mb_per_tweet * view_per_min\n",
+    "print(data_per_min)"
    ]
   },
   {
@@ -225,7 +235,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "I think the likes counter acts in parrallel. For example, there can be multiple local counters for a tweet and a global counter. The global counter would have a lock that\n",
+    "only enable one local counter to periodically add to it at a time. I also think there is an efficient algoritm for these features that would limit the number of data\n",
+    "it has to scan through. On a monthly basis, I think millions of data is being touched by this operation as the database has to constantly keep track of everyone's tweets.\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
