--- a/Code.ipynb
+++ b/Code.ipynb
@@ -232,9 +232,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nI think the likes counter acts in parrallel. For example, there can be multiple local counters for a tweet and a global counter. The global counter would have a lock that\\nonly enable one local counter to periodically add to it at a time. I also think there is an efficient algoritm for these features that would limit the number of data\\nit has to scan through. On a monthly basis, I think millions of data is being touched by this operation as the database has to constantly keep track of everyone's tweets.\\n\""
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "I think the likes counter acts in parrallel. For example, there can be multiple local counters for a tweet and a global counter. The global counter would have a lock that\n",
@@ -242,6 +253,13 @@
     "it has to scan through. On a monthly basis, I think millions of data is being touched by this operation as the database has to constantly keep track of everyone's tweets.\n",
     "\"\"\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
