--- a/Code.ipynb
+++ b/Code.ipynb
@@ -102,39 +102,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19.550168490969032\n"
+      "29.595311732831874\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "total_pic_size = 0\n",
-    "total_url_size = 0\n",
-    "total_tweet_size = 0\n",
+    "total_pic = 0\n",
     "total_vid = 0\n",
+    "total_char = 0\n",
     "for df in df_array:\n",
-    "    for photos in df[\"photos\"]:\n",
-    "        if(validators.url(photos)):\n",
-    "            file = urllib.request.urlopen(photos)\n",
-    "            total_pic_size += file.length\n",
     "    for tweet in df[\"tweet\"]:\n",
-    "        total_tweet_size += len(tweet)\n",
-    "    for link in df[\"urls\"]:\n",
-    "        if(validators.url(link)):\n",
-    "            url = urllib.request.urlopen(link)\n",
-    "            total_url_size += file.length\n",
-    "    total_vid += np.sum(np.array(df[\"video\"]))\n",
-    "total_vid*= 300\n",
-    "total = ((total_pic_size + total_url_size + total_tweet_size) / 1000000) + total_vid\n",
-    "avg_mb_per_tweet = total/count_post\n",
-    "print(avg_mb_per_tweet)"
+    "        total_char += len(tweet)\n",
+    "    total_vid +=  np.sum(df[\"video\"])\n",
+    "    for pho in df[\"photos\"]:\n",
+    "        total_pic += len(pho)\n",
+    "\n",
+    "total_char = total_char/(1000*1000) #char in mb\n",
+    "total_mb =  total_char + total_vid*521 + total_pic *5\n",
+    "\n",
+    "avg_data = total_mb/count_post\n",
+    "\n",
+    "print(avg_data)\n",
+    "\n"
    ]
   },
   {
