--- a/Code.ipynb
+++ b/Code.ipynb
@@ -142,10 +142,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20256300.331423506"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "avg_data_transfer =  avg_data * avg_peop\n",
+    "avg_data_transfer"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,14 +170,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17.061699000173682\n"
+      "2524.6020340390205\n"
      ]
     }
    ],
@@ -185,19 +199,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1304.213877690228\n"
+      "150913.22133591672\n"
      ]
     }
    ],
    "source": [
-    "data_per_min =  avg_mb_per_tweet * view_per_min\n",
+    "data_per_min =  avg_data * view_per_min\n",
     "print(data_per_min)"
    ]
   },
